--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" /><meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
 	<!-- This site is optimized with the Yoast SEO plugin v20.10 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Home - American Milsim</title>
+	<title>Airsoft Spring Cilegon - A.S.I.C</title>
 	<meta name="description" content="The company was founded by devoted players of the sport with a wealth of experience creating a fast paced, intense Milsim experience." />
 	<link rel="canonical" href="https://americanmilsim.com/" />
 	<meta property="og:locale" content="en_US" />
